--- a/Thesis/Thesis.Web/Thesis.Web.csproj
+++ b/Thesis/Thesis.Web/Thesis.Web.csproj
@@ -183,7 +183,6 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ImportXMLFileController.cs" />
     <Compile Include="Controllers\TeamMembersEmailGraphsController.cs" />
-    <Compile Include="DTOs\DataPoint.cs" />
     <Compile Include="DTOs\DataPointDto.cs" />
     <Compile Include="DTOs\EdgeDto.cs" />
     <Compile Include="DTOs\GraphDto.cs" />
@@ -283,6 +282,7 @@
     <Content Include="Content\webfonts\fa-solid-900.woff2" />
     <Content Include="Content\daterangepicker.scss" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\canvasjs.js" />
     <Content Include="Scripts\custom.js" />
     <Content Include="Scripts\daterangepicker.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
@@ -364,6 +364,7 @@
     <Content Include="Views\EmailDownload\Index.cshtml" />
     <Content Include="Views\Shared\_Toastr.cshtml" />
     <Content Include="Views\TeamMembersEmailGraphs\Graph2d_partial.cshtml" />
+    <Content Include="Views\TeamMembersEmailGraphs\GraphPie2d_partial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
