--- a/Thesis/Thesis.Web/Thesis.Web.csproj
+++ b/Thesis/Thesis.Web/Thesis.Web.csproj
@@ -365,6 +365,7 @@
     <Content Include="Views\Shared\_Toastr.cshtml" />
     <Content Include="Views\TeamMembersEmailGraphs\Graph2d_partial.cshtml" />
     <Content Include="Views\TeamMembersEmailGraphs\GraphPie2d_partial.cshtml" />
+    <Content Include="Views\TeamMembersEmailGraphs\NetworkStatistics_partial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\uploads\" />
